samples/OK/fun_nopars.php
<?php
declare(strict_types=1);
function boo() : void
{
    return;
}
