samples/SEMANTIC_ERROR/return_if_undef_var.php
<?php
declare(strict_types=1);
function foo() : void
{
}
if(foo())
{
    return($a);
}
?>
